--- a/postman/amtBootcampApp-1.0.postman_collection.json
+++ b/postman/amtBootcampApp-1.0.postman_collection.json
@@ -1,6 +1,6 @@
 {
 	"id": "c24aeb11-6992-d197-2511-df7e78715265",
-	"name": "AMT-WildFly",
+	"name": "amtBootcampApp-1.0",
 	"description": "",
 	"order": [
 		"55800460-a2c1-45c2-89a6-705cc43715dc",
